--- a/shopping/package.json
+++ b/shopping/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "^1.0.0-beta.17",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "lodash": "^4.17.4",
+    "react": "^15.5.3",
+    "onsenui": "^2.7.0",
+    "react-dom": "^15.5.3",
+    "react-onsenui": "^1.8.0",
     "react-scripts": "1.0.14"
   },
   "scripts": {
