--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "scripts": {
-    "postinstall": "cd shopping && npm install",
-    "start": "cd shopping && npm start"
+    "postinstall": "cd shoppingServer && npm install",
+    "start": "cd shoppingServer && npm start"
   },
   "cacheDirectories": [
-    "shopping/node_modules"
+    "shoppingnode_modules",
+    "shoppingServer/node_modules",
+    "node_modules"
   ],
   "engines": {
     "node": "8.8.0",
     "npm": "5.4.2"
-  },
-  "dependencies": {
-    "material-ui-search-bar": "^0.4.0"
   }
 }
