--- a/shoppingIOS/Podfile
+++ b/shoppingIOS/Podfile
@@ -7,6 +7,8 @@ def shared_pods
   pod 'Kingfisher', '~> 4.1'
   pod 'IQKeyboardManagerSwift', '~> 5.0'
   pod 'PKHUD', '~> 5.0'
+  pod 'Alamofire', '~> 4.5'
+  pod 'PromiseKit/Alamofire', '~> 4.5'
 end
 
 target 'shoppingIOS' do
