--- a/shoppingIOS/Podfile
+++ b/shoppingIOS/Podfile
@@ -9,6 +9,7 @@ def shared_pods
   pod 'PKHUD', '~> 5.0'
   pod 'Alamofire', '~> 4.5'
   pod 'PromiseKit/Alamofire', '~> 4.5'
+  pod 'ESPullToRefresh', '~> 2.7'
 end
 
 target 'shoppingIOS' do
